--- a/src/main/resources/com/tfg/dashboard_tfg/view/DownloaderClientView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/DownloaderClientView.fxml
@@ -121,8 +121,8 @@
                     </VBox>
                 </TitledPane>
 
-                <TitledPane text="Storage Stats" styleClass="settings-pane" maxHeight="180">
-                    <VBox spacing="3" styleClass="settings-container">
+                <TitledPane text="Storage Stats" styleClass="settings-pane" >
+                    <VBox spacing="3" styleClass="settings-container" >
                         <PieChart fx:id="storageChart" title="Disk Usage"/>
                         <HBox alignment="CENTER" spacing="10">
                             <Label fx:id="freeSpaceLabel" text="Free: 0 GB" styleClass="stat-value"/>
@@ -140,7 +140,7 @@
                         <Insets top="10" right="10" left="10"/>
                     </padding>
 
-                    <HBox alignment="CENTER_LEFT" spacing="5">
+                    <HBox alignment="CENTER_LEFT" spacing="5" maxHeight="10">
                         <Label text="Torrent List" styleClass="section-header"/>
                         <Region HBox.hgrow="ALWAYS"/>
                         <ComboBox fx:id="statusFilter" prefWidth="150">
