--- a/src/main/resources/com/tfg/dashboard_tfg/view/sonarrView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/sonarrView.fxml
@@ -67,7 +67,9 @@
 
                             <Button fx:id="connectButton" text="Connect"
                                     GridPane.columnIndex="1" GridPane.rowIndex="2"
-                                    styleClass="console-button"/>
+                                    styleClass="console-button"
+                                    onAction="#onConnectClicked"
+                            />
                         </GridPane>
                     </VBox>
                 </TitledPane>
